Envoy/config/lds.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 80
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: ingress_http
        route_config:
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match:
                prefix: "/api/identity/"
              route:
                auto_host_rewrite: false
                prefix_rewrite: "/api/identity/"
                cluster: identity
              request_headers_to_add:
              - header:
                  key: "x-envoy-path-base"
                  value: "/api/identity"
            - match:
                prefix: "/api/products/"
              route:
                prefix_rewrite: "/api/products/"
                cluster: products
            - match:
                prefix: "/api/stocks/"
              route:
                prefix_rewrite: "/api/stocks/"
                cluster: stocks
            - match:
                prefix: "/api/documents/"
              route:
                prefix_rewrite: "/rest/documents/"
                cluster: documents
            - match:
                prefix: "/api/meilisearch/"
              route:
                prefix_rewrite: "/"
                cluster: meilisearch
            - match:
                prefix: "/"
              route:
                cluster: frontend
    
        http_filters:
        - name: envoy.filters.http.jwt_authn
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
            providers:
              provider1:
                remote_jwks:
                  http_uri:
                    uri: "http://msrdidentity/.well-known/jwks"
                    cluster: identity
                    timeout: 5s
                  cache_duration:
                    seconds: 300
            rules:
              - match:
                  prefix: /api/stocks
                requires:
                  provider_name: provider1
              - match:
                  prefix: /api/meilisearch
                requires:
                  provider_name: provider1
            bypass_cors_preflight: true
        - name: envoy.filters.http.router
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
